# jira-workload-report

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml
src/: config.rs  jclient.rs  lib.rs
