[package]
name = "jira-workload-report"
version = "0.1.0"
authors = ["Rodion Malinovsky <rodionmalino@gmail.com>"]
edition = "2018"

[lib]
name = "jwlrep_lib"

[dependencies]
log = "0.4"
env_logger = "0.7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"